# SolanaID

./: .gitignore  Anchor.toml  DEPLOYMENT.md  HACKATHON_SUBMISSION.md  README.md  env.example  package-lock.json  package.json  vercel.json
app/: env.example  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/verify/: page.tsx
app/components/providers/: AppKitProvider.tsx
app/components/ui/: ClientBackground.tsx  CyberGrid.tsx  FloatingOrbs.tsx  GlassCard.tsx  GlitchText.tsx  HolographicButton.tsx  NeuralBackground3D.tsx  ParticleField.tsx
app/components/verification/: NFTMinter.tsx  PlatformSelector.tsx  ProofDisplay.tsx  VerificationFlow.tsx
app/components/wallet/: ConnectButton.tsx
app/lib/: utils.ts
app/lib/hooks/: useIdentity.ts  useProgram.ts  useTLSNotary.ts  useVerification.ts
app/lib/solana/: constants.ts
app/scripts/: generate-icons.js
docker/: docker-compose.yml  notary.Dockerfile
programs/solanaid/: Cargo.toml
programs/solanaid/src/: errors.rs  lib.rs  utils.rs
programs/solanaid/src/instructions/: initialize.rs  mod.rs  register_identity.rs  revoke_identity.rs  update_metadata.rs  verify_proof.rs
programs/solanaid/src/state/: config.rs  identity.rs  mod.rs  verification.rs
scripts/: initialize-protocol.ts  setup-notary-nodes.sh
sdk/: package.json
sdk/src/: index.ts
tlsnotary/browser-extension/: manifest.json  package.json
tlsnotary/browser-extension/src/: background.ts  content.ts  (+1 more)
tlsnotary/notary-server/: Cargo.toml
(+1 files in other folders)
