[package]
name = "solanaid"
version = "0.1.0"
description = "zkTLS Identity Verification on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solanaid"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
solana-program-test = "~1.18.0"
